--- a/Annual Review 2019 Report/OneYearReport 0.2.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.2.tex
@@ -89,16 +89,19 @@ In this section I will attempt to summarize the different aspects I've seen on t
 
 My project is about optimising all sorts of logistical decisions regarding offshore energy sites, primarily windfarms. This includes supply chains, routing, design of the windfarm, and scheduling of the operations to be done on the windfarm. The latter is where my primary focus lies, and what most of this report will be on. 
 
+\subsection{Logistical decisions on offshore windfarms} \label{ss:logdec}
 A typical offshore windfarm (OWF) will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. A typical OWF currently in development might have upwards of 100 WTGs and 2 OSPs \cite{ruk2017, barlow2018mixed}. 
 
 The life-cycle of an OWF can be broken up into three phases: installation, maintenance and decommissioning. Installation and decommission are similar; a set of tasks needs to be completed in a cost effective way. For each of the structures there is a set of tasks that need to be completed in series for each individual structure, such as (for installation): preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation) \cite{kerkhove2017optimised}. Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for separate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction \cite{barlow2017using}. This would mean the farm starts making money significantly earlier, and can therefore have big impacts on desired schedules. In some situations the company might even set desired deadline for certain milestones, like 10\% or 50\% of the WTGs being operational. 
 
 The structure of maintenance projects is completely different. Scheduling maintenance has to be done significantly in advance, as the vessels used need to be reserved. For this reason simply reacting to failures on the site would mean it can take a long time before a failure is repaired. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors means a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
 
-The stochasticity of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost %TODO
-The measure with which to compare schedules can vary. The most basic measure would be to produce a schedule with the earliest end time. Given the stochastic nature of the project, naively this would become the earliest expected end time. There are however a lot of different goals that could be described; instead of expected end time, a high confidence might be desired for the specific project. So instead of looking at the expected end time, one could for example look at the end time by which we can be 95\% certain the project would be completed (based on simulations). Using the end time as a measure is also up for debate, as the net profit is often more important for the companies doing these projects. So while the end time would obviously be postponed, completely halting the project over the winter months (during which no rent would be payed for the vessels) might be beneficial for the total costs, since there will be less individual days during summer where the weather would require the work to be halted (while the vessels would still be rented). As I will be discussing a lot of the literature in \Cref{s:lit} I will discuss the goals and objective functions in more detail there. 
+The stochasticity of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some company may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
 
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
+
+\subsection{This research project} \label{ss:thisproj}
+Lorem Ipsum
 
 \pagebreak
 
