Minor additions to 2.2

--- a/Annual Review 2019 Report/OneYearReport 0.2.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.2.tex
@@ -101,8 +101,7 @@ The stochasticity of the project also comes with various challenges. Naively one
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
 \subsection{This research project} \label{ss:thisproj}
-Lorem Ipsum
-
+The goal of this project is to look at the entire life cycle of OWFs, and how decisions near the start of this life cycle impact the situation down the line. Specifically I aim to use both optimization and simulation to provide insight into logistical decisions, primarily scheduling, but also routing and layout of the site. 
 \pagebreak
 
 \section{Literature} \label{s:lit}
