--- a/Annual Review 2019 Report/OneYearReport 0.2.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.2.tex
@@ -184,7 +184,7 @@ In \cite{barlow2017using}, the final paper (so far) on this tool, they go a bit 
 
 \bigskip
 
-The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}. In that, the problem of assigning specific crew members to specific tasks over long periods of time is considered. It goes more in depth than I will in my research as I will not consider individual crew members but parts of this research are still valuable for my research. It is stated that contractually each crew member has a certain limit on the length of time they are allowed to work, and then have a minimum amount of time to rest before their next shift. If this maximum amount of work time is surpassed, the costs go up as overtime salaries are higher than regular salaries. Additionally each crew member has a set amount of time they can be on the sea before needing time at shore. This is usually cut up in blocks of four or five weeks, as these contracts are standarized. While I do not plan to integrate this problem into my research on the level of individual crew members, these constraints will likely have to be considered in any research I do. For example it might not be accurate to assume costs of using a vessel strictly follow a linear pattern over time, as the increased costs of overtime will come in at some point. The times between port visits will also have to be constrained in some way to ensure crew members do not spend too much time offshore. However, these are still much lighter contraints than are considered by the research discussed. In it two types of crew members are considered; those with a fixed contract and outside hires who can be hired when needed. Additionally crew nationalities are considered, as ships with certain flags can only employ certain nationalities, and certain nationalities apparently do not work well together. For my research, these constraints relating to individual crew members will not be considered, and I will assume they are handled by the company that rents out the vessels (as they also provide the crew). 
+The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}. In that, the problem of assigning specific crew members to specific tasks over long periods of time is considered. It goes more in depth than I will in my research as I will not consider individual crew members but parts of this research are still valuable for my research. It is stated that contractually each crew member has a certain limit on the length of time they are allowed to work, and then have a minimum amount of time to rest before their next shift. If this maximum amount of work time is surpassed, the costs go up as overtime salaries are higher than regular salaries. Additionally each crew member has a set amount of time they can be on the sea before needing time at shore. This is usually cut up in blocks of four or five weeks, as these contracts are standarized. While I do not plan to integrate this problem into my research on the level of individual crew members, these constraints will likely have to be considered in any research I do. For example it might not be accurate to assume costs of using a vessel strictly follow a linear pattern over time, as the increased costs of overtime will come in at some point. The times between port visits will also have to be constrained in some way to ensure crew members do not spend too much time offshore. However, these are still much lighter constraints than are considered by the research discussed. In it two types of crew members are considered; those with a fixed contract and outside hires who can be hired when needed. Additionally crew nationalities are considered, as ships with certain flags can only employ certain nationalities, and certain nationalities apparently do not work well together. For my research, these constraints relating to individual crew members will not be considered, and I will assume they are handled by the company that rents out the vessels (as they also provide the crew). 
 
 \bigskip
 
@@ -192,7 +192,7 @@ Another logistical decision topic related to the offshore windfarm sites is deci
 
 %TODO
 \subsubsection{More general work on stochastic scheduling} \label{sss:stoch}
-A comprehensive overview of various approaches to scheduling within an uncertain envirionment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochasitic project scheduling and fuzzy project project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have siginificant lead times and in-the-moment scheduling is infeasable in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. This method is discussed in more detail in \Cref{ss:meth}. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the Simulator discussed in \Cref{s:sim}. 
+A comprehensive overview of various approaches to scheduling within an uncertain envirionment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochasitic project scheduling and fuzzy project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have siginificant lead times and in-the-moment scheduling is infeasable in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. This method is discussed in more detail in \Cref{ss:meth}. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the Simulator discussed in \Cref{s:sim}. 
 
 At the time of the above study not a lot of research had been done into robust scheduling. A work that had been published and is mentioned in the study is \cite{sevaux2002genetic}. It is one of the few works I was able to find which attempted to solve a robust scheduling problem using genetic algorithms. Their initial results seemed promising, but their industry partner stopped the collaboration before practical results were found. Since the initial results seemed promissing and no reason was found that indicates genetic algorithms are not fit to be used for scheduling problems, this is one of the methods considered for my reserach, as discussed later in \Cref{ss:meth}.
 
@@ -268,7 +268,7 @@ This is repeated for every vessel and task, until that vessel has completed all 
 
 \bigskip
 
-While this is clearly as of yet a rather bare bones setup, everything is programmed to be expandable, and I have plans on how to make this model more useful. How I plan to do this I will explain in \Cref{sss:simfut} but for now I would like to make a remark on previous failed attempts to program this. In my first attempt, I did not actually simulate different vessels and simply had a count of how many vessels were available. After some simple test cases two major problems with this approach emerged. The first is that each vessel necessarily had to be identical. While they currently are still identical, in my current setup they could easily be given different characteristics. The second problem was that there was not a set of tasks per vessel, and simply a common pool of tasks. This meant that transition between locations could not be a task, as this task would necessarily have to be completed by the same vessels doing the operations at these locations. Another problem with this restriction is that is is simply impractical in reality; the tasks a vessel will complete have to be mostly predetermined for the sake of supplies.
+While this is clearly as of yet a rather bare bones setup, everything is programmed to be expandable, and I have plans on how to make this model more useful. How I plan to do this I will explain in \Cref{ss:simfut} but for now I would like to make a remark on previous failed attempts to program this. In my first attempt, I did not actually simulate different vessels and simply had a count of how many vessels were available. After some simple test cases two major problems with this approach emerged. The first is that each vessel necessarily had to be identical. While they currently are still identical, in my current setup they could easily be given different characteristics. The second problem was that there was not a set of tasks per vessel, and simply a common pool of tasks. This meant that transition between locations could not be a task, as this task would necessarily have to be completed by the same vessels doing the operations at these locations. Another problem with this restriction is that is is simply impractical in reality; the tasks a vessel will complete have to be mostly predetermined for the sake of supplies.
 
 After realizing this I effectively started over with this new vessel structure in mind. There were some other problems during this attempt; for example the realized duration of a task (taking into account both natural delay and weather-based delay) was decided at the moment it was started. The problem with this is that tasks taking a long time can experience very different weather conditions while it is in progress. The weather-based delay was decided at the moment the task was started with the weather conditions at that moment. While in the current implementation there is no weather delay, I ended up changing to my previously described set up to allow for the duration of a task to be influenced by weather during its entire duration and not just at its start. In general, I believe that my current model is very adaptable, and the changes described in \Cref{ss:simfut} can be implemented without changing the primary structure of the simulator. 
 
@@ -310,7 +310,7 @@ The first direction is to focus on the installation projects and work from the e
 \bigskip
 
 %Maintenance ideas: New uncertain aspects to do with when stuff breaks (poisson distribution) possibly correlated with weather, ???
-The second direction to take this research is to focus on the maintenance of an energy site. As mentioned in \Cref{sss:maint} in significant additional reading will have to be done on this subject, and I am planning to do see in the coming months (as described in \Cref{ss:timel}). Generally the typical subjects in maintenance such as supply chain management and minimizing asset failure are significantly more difficult in our context, as there is a large lead up time before any emergency operations can be performed on the site. Intuitively the OSPs are the most vital to prevent failure in, as a failure in one of them can mean dozens of WTGs are no longer producing energy. Therefore I am planning on experiments with various maintenance strategies with the aim of maximizing overall profit. For more detail more research will need to be done first, which I will do in the upcoming months. It is clear there is a relatively large amount of research on maintenance of offshore sites (as compared to a small amount of research on their installation), so any future research will have to build on that.
+The second direction to take this research is to focus on the maintenance of an energy site. As mentioned in \Cref{sss:maint} in significant additional reading will have to be done on this subject, and I am planning to do this in the coming months (as described in \Cref{ss:timel}). Generally the typical subjects in maintenance such as supply chain management and minimizing asset failure are significantly more difficult in our context, as there is a large lead up time before any emergency operations can be performed on the site. Intuitively the OSPs are the most vital to prevent failure in, as a failure in one of them can mean dozens of WTGs are no longer producing energy. Therefore I am planning on experiments with various maintenance strategies with the aim of maximizing overall profit. For more detail more research will need to be done first, which I will do in the upcoming months. It is clear there is a relatively large amount of research on maintenance of offshore sites (as compared to a small amount of research on their installation), so any future research will have to build on that.
 
 \bigskip
 
