--- a/Annual Review 2019 Report/OneYearReport 0.2.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.2.tex
@@ -300,6 +300,50 @@ As mentioned earlier, a decision needs to be made on the presumed knowledge of t
 \pagebreak
 
 \section{Future Work} \label{s:concl}
+In this section I will go into more detail about my goals from \Cref{ss:thisproj}, and use what I discussed in Sections \ref{s:lit} and \ref{s:sim} to explain how I am planning to approach each goal, and explain how I am planning to fill in previously identified research gaps. 
+
+\begin{enumerate}
+\item Building a optimisation model and simulation model of the installation projects of OWF sites. 
+\end{enumerate}
+
+Effectively this would come down to making two models inspired by the models discussed in  \Cref{sss:sched}, in which I took two focus papers and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic (as in \cite{kerkhove2017optimised}) could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve a linear program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving simulations when necessary. However, if this turns out to not be feasible there are alternatives such as using an evolutionary algorithm for optimisation. 
+
+\begin{enumerate}
+\addtocounter{enumi}{1}
+\item Building similar models for the maintenance projects.
+\end{enumerate}
+
+Lorem Ipsum
+
+\begin{enumerate}
+\addtocounter{enumi}{2}
+\item Combining above models into a multi-level model spanning the full life cycle, where the optimization model uses the simulation model.
+\end{enumerate}
+
+Lorem Ipsum
+
+\begin{enumerate}
+\addtocounter{enumi}{3}
+\item Implementing above models into a simulator, which should function as a tool to help make logistical decisions while considering their long-term impact.
+\end{enumerate}
+
+Lorem Ipsum
+
+\begin{enumerate}
+\addtocounter{enumi}{4}
+\item Using the tool to look into optimal scheduling policies. 
+\end{enumerate}
+
+Lorem Ipsum
+
+\begin{enumerate}
+\addtocounter{enumi}{5}
+\item Applying above models and tool to real life data and projects.
+\end{enumerate}
+
+Lorem Ipsum
+
+\subsection{TODO: Remove}
 In this section I will outline the two main research directions to be explored in the rest of this project. I will sum up the previously identified research gaps and describe how I am planning to contribute to them. 
 
 \bigskip
