--- a/Annual Review 2019 Report/OneYearReport 0.2.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.2.tex
@@ -313,55 +313,36 @@ Effectively this would come down to making two models inspired by the models dis
 \item Building similar models for the maintenance projects.
 \end{enumerate}
 
-Lorem Ipsum
+As mentioned in \Cref{sss:maint} significant additional reading will have to be done on this subject, and I am planning to do this in the coming months (as described in \Cref{ss:timel}). Generally the typical subjects in maintenance such as supply chain management and minimizing asset failure are significantly more difficult in our context, as there is a large lead up time before any emergency operations can be performed on the site. Intuitively the OSPs are the most vital to prevent failure in, as a failure in one of them can mean dozens of WTGs are no longer producing energy. Therefore I am planning on experiments with various maintenance strategies with the aim of maximizing overall profit. For more detail more research will need to be done first, which I will do in the upcoming months. It is clear there is a relatively large amount of research on maintenance of offshore sites (as compared to a small amount of research on their installation), so any future research will have to build on that.
 
 \begin{enumerate}
 \addtocounter{enumi}{2}
 \item Combining above models into a multi-level model spanning the full life cycle, where the optimization model uses the simulation model.
 \end{enumerate}
 
-Lorem Ipsum
+This would require the first two goals to be completed, and additionally similar models will have to be made for decommissioning projects. As stated earlier, these models will be very similar to those of the installation projects, so this is expected to be relatively easy. However, integrating these different models into a single one will likely be difficult, and a lot of research into integrated models has been done. I will have to make myself familiar with this research in order to properly integrate the models.  
+%TODO: Change if I do literature on integration models
 
 \begin{enumerate}
 \addtocounter{enumi}{3}
 \item Implementing above models into a simulator, which should function as a tool to help make logistical decisions while considering their long-term impact.
 \end{enumerate}
 
-Lorem Ipsum
+This tool is described in detail in \Cref{s:sim}. This is currently a rather basic tool, but it is made to be easily expanded and to be used with the described models. 
 
 \begin{enumerate}
 \addtocounter{enumi}{4}
 \item Using the tool to look into optimal scheduling policies. 
 \end{enumerate}
 
-Lorem Ipsum
+The tool will include the optimisation model(s) from the above goals, and experiments into general scheduling policies will be done. Each project is of course different, but potentially some general insights and "rules of thumb" can be gained by experimenting with test data. This data will be based on real sites and therefore be realistic, but it will not correspond to any specific OWF. 
 
 \begin{enumerate}
 \addtocounter{enumi}{5}
 \item Applying above models and tool to real life data and projects.
 \end{enumerate}
 
-Lorem Ipsum
-
-\subsection{TODO: Remove}
-In this section I will outline the two main research directions to be explored in the rest of this project. I will sum up the previously identified research gaps and describe how I am planning to contribute to them. 
-
-\bigskip
-
-%Installation ideas: Improvement of Kerkhove with early starts and methodology improvements
-The first direction is to focus on the installation projects and work from the existing literature. Of the models I discussed in \Cref{sss:sched} I identified both strengths and weaknesses, and my hope is to be able to combine them to highlight their strengths. I think a focus on cashflows is a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic (as in \cite{kerkhove2017optimised}) could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve a linear program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving simulations when necessary. However, if this turns out to not be feasible there are alternatives such as using an evolutionary algorithm for optimisation. 
-
-\bigskip
-
-%Maintenance ideas: New uncertain aspects to do with when stuff breaks (poisson distribution) possibly correlated with weather, ???
-The second direction to take this research is to focus on the maintenance of an energy site. As mentioned in \Cref{sss:maint} in significant additional reading will have to be done on this subject, and I am planning to do this in the coming months (as described in \Cref{ss:timel}). Generally the typical subjects in maintenance such as supply chain management and minimizing asset failure are significantly more difficult in our context, as there is a large lead up time before any emergency operations can be performed on the site. Intuitively the OSPs are the most vital to prevent failure in, as a failure in one of them can mean dozens of WTGs are no longer producing energy. Therefore I am planning on experiments with various maintenance strategies with the aim of maximizing overall profit. For more detail more research will need to be done first, which I will do in the upcoming months. It is clear there is a relatively large amount of research on maintenance of offshore sites (as compared to a small amount of research on their installation), so any future research will have to build on that.
-
-\bigskip
-
-%Combine for full life cycle 
-Ideally, both of these directions can be explored to some satisfactory extend. In that case I would aim to combine the installation model and maintenance model into a single model for a general decision support tool for various logistical decisions about OWFs. In addition to the above two directions, there is a third phase of the project to be taken into account for this; decommission. This is presumed to be very similar to the installation phase (hence not massively interesting in itself in my opinion) but there are some key differences, such as the reverse direction of cashflows (we start with the whole site operational but getting less operational over time), and very uncertain costs given that the decommissioning of sites currently being build will occur in several (unpredictable) decades. However, these obstacles can be overcome to make a good general use decision support tool for the scheduling of OWF projects. This is clearly a very ambitious goal, but it might be feasible depending on my research progress in the other directions over the following years. 
-
-\bigskip
+Finally the tool would ideally be used in real projects, or at least be tested on a previously build real site to verify its accuracy and test its strength (and potentially weaknesses). 
 
 \subsection{Timeline and next steps} \label{ss:timel}
 %Timeline and focus from here
